# silik-messaging

./: .gitignore  README.md  config_ex.yaml  config_scheme.json  pyproject.toml  requirements.txt
silik_messaging/: __main__.py  config_ex.yaml  main.py
silik_messaging/src/: app.py  signal_connector.py  utils.py
